# Zoologico

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
src/: Acuatico.cpp  Acuatico.h  Alimentacion.cpp  Alimentacion.h  Animal.cpp  Animal.h  Animales.cpp  Animales.h  CMakeLists.txt  Desertico.cpp  Desertico.h  Habitat.cpp  Habitat.h  Main.cpp  Polar.cpp  Polar.h  Selvatico.cpp  Selvatico.h  Zoo.cpp  Zoo.h
test/: CMakeLists.txt  controlErrorZoo.cpp
